Cap nhat CSDL va Entity chuc nang Catalog